# SlicerRediMinds

./: CMakeLists.txt  LICENSE.txt  README.md  RediMinds.py  Rediminds.py  SlicerRediMinds.s4ext  SlicerRediminds.s4ext
RediMinds/: RediMinds.py
Resources/UI/: RediMinds.ui  Rediminds.ui
